fix: footer alignment

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -58,6 +58,9 @@
     margin: 0 auto;
   }
 
+  .brandLogo {
+    min-width: 297px;
+  }
   .brand,
   .link,
   .socialMedia {
